src/assets/styles/landing.scss
.wrapper {
    display: grid;
    grid-template-columns: 65% 35%;
    grid-template-rows: 60% 40%;
    grid-template-areas: " a b "
                         " c d " ;
    position: absolute;
    padding:0;
    margin:0;
    top:0;
    left:0;
    width: 95%;
    height: 95%;
}
  
.a {
    grid-area: a;
}
.b {
    grid-area: b;
}
.c {
    grid-area: c;
    padding-left: 5%;
    background-color: #efefef;
}
.d {
    grid-area: d;
    background-color: #efefef;
    margin-left: 9%;
    margin-right: -15%;
}

#book-img {
    width:150%;
    margin-top: -65%;
}

.banner-like {
    max-height: 100px;
}
.icon {
    max-height: 110px;
}

.black-text {
    color: black;
    text-align: center;
    font-size: 14pt;
}

.little-black-text {
    color: black;
    text-align: center;
}

.black-title {
    color: black;
    text-align: center;
    font-size: 16pt;
}

.book-column {
    flex-direction: column;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
}

#start-today {
    display: flex;
    justify-content: center;
    align-self: center;
    margin-bottom: 10px;
    text-decoration: none;
    background-color: #FAFAFA;
    color: #0B0B0B;
}

#second-screen {
    position: relative;
    top: 110vh;
    padding-bottom: 50px;
}

.a-link {
    text-decoration: none;
}

#timeline {
    border-color: #efefef;
    margin-bottom: 45px;
}

.margin-lesser {
    margin-top: -1%;
    text-align: center;
}

.initial {
    margin-left: 5%;
}

.title {
    text-align: center;
    padding-bottom: 15px;
    padding-top: 15px;
}

